--- a/_sass/partials/_utilities.scss
+++ b/_sass/partials/_utilities.scss
@@ -51,7 +51,7 @@ em {
 	font-style: italic;
 }
 html {
-	display: block;
+	visibility: visible;
 }
 body {
 	-webkit-font-smoothing: antialiased;
